# surrealdb_extra

./: .gitignore  Cargo.toml  LICENSE  README.md  crates-io.md
.github/: FUNDING.yml
surrealdb_extra/: Cargo.toml
surrealdb_extra/src/: lib.rs
surrealdb_extra/src/query/: mod.rs  statement.rs  states.rs
surrealdb_extra/src/query/builder/: create.rs  mod.rs  relate.rs  select.rs  update.rs
surrealdb_extra/src/query/parsing/: cond.rs  data.rs  fetch.rs  field.rs  group.rs  idiom.rs  limit.rs  mod.rs  omit.rs  operator.rs  order.rs  output.rs  set_expression.rs  split.rs  start.rs  table.rs  timeout.rs  unset_expression.rs  value.rs  version.rs  what.rs  with.rs
surrealdb_extra/src/query/parsing/cond/: condition.rs  mod.rs
surrealdb_extra/src/query/relate/: mod.rs
surrealdb_extra/src/query/select/: mod.rs  states.rs
surrealdb_extra/src/query/update/: mod.rs
surrealdb_extra/src/query_builder/: err.rs  mod.rs  states.rs
surrealdb_extra/src/surreal_value_json/: mod.rs
surrealdb_extra/src/table/: err.rs  mod.rs
surrealdb_extra/src/trait/: mod.rs  table.rs
surrealdb_extra_bench/: Cargo.toml
surrealdb_extra_bench/benches/: select_builder.rs
surrealdb_extra_derive/: Cargo.toml  crates-io.md
surrealdb_extra_derive/src/: lib.rs
surrealdb_extra_derive/src/common/: attr.rs  mod.rs
surrealdb_extra_derive/src/surreal_value_json/: kind.rs
surrealdb_extra_derive/src/table/: name.rs
surrealdb_extra_tests/: Cargo.toml
surrealdb_extra_tests/tests/: lib.rs
surrealdb_orm/: Cargo.toml
surrealdb_orm/src/: lib.rs
surrealdb_orm/src/query_builder/: filter.rs  mod.rs
surrealdb_orm/src/trait/: table.rs
surrealdb_orm_derive/: Cargo.toml
surrealdb_orm_derive/src/: field_names.rs  lib.rs  table_name.rs
surrealdb_orm_tests/: Cargo.toml
surrealdb_orm_tests/tests/: lib.rs  table.rs
