[workspace]
resolver = "2"
members = [
    "surrealdb_extra",
    "surrealdb_extra_derive",
    "surrealdb_extra_tests",
    "surrealdb_extra_bench",
]

[workspace.dependencies]
surrealdb = { package = "surrealdb", version = "2.3.2" }

[workspace.package]
version = "0.11.0"
edition = "2024"
rust-version = "1.87.0"
