[workspace]
resolver = "2"
members = [
    "surrealdb_extra",
    "surrealdb_extra_derive",
    "surrealdb_extra_tests",
]

[workspace.dependencies]
surrealdb = { version = "3.0.0-beta.1" }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.145" }

[workspace.package]
version = "0.11.1"
edition = "2024"
