[package]
name = "surrealdb_extra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Adds a orm and query builder on top of surrealdb"
readme = "crates-io.md"
documentation = "https://docs.rs/surrealdb_extra"
repository = "https://github.com/jakin010/surrealdb_extra"
keywords = ["surrealdb", "surrealdb_extra", "surrealdb_orm", "orm", "query_builder"]
categories = ["database", "database-implementations"]

[dependencies]
surrealdb_extra_derive = { version = "0.11.0", path = "../surrealdb_extra_derive" }
async-trait = "0.1.83"
surrealdb = { workspace = true }
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.62"
anyhow = "1.0.86"
chrono = "0.4.38"
paste = { version = "1.0.15", optional = true }

[features]
default = ["derive"]
table = []
query = ["derive", "paste"]
derive = ["table"]

[dev-dependencies]
serde_with = "3.9.0"
surrealdb = { workspace = true, features = ["kv-mem"] }
tokio = { version = "1.38.1", features = ["macros"] }

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
