[package]
name = "surrealdb_extra"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Adds a orm and query builder on top of surrealdb"
readme = "crates-io.md"
documentation = "https://docs.rs/surrealdb_extra"
repository = "https://github.com/jakin010/surrealdb_extra"
keywords = ["surrealdb", "surrealdb_extra", "surrealdb_orm", "orm", "query_builder"]
categories = ["database", "database-implementations"]

[dependencies]
surrealdb_extra_derive = { version = "0.11.0", path = "../surrealdb_extra_derive" }
surrealdb = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = ["table"]
table = ["surrealdb_extra_derive/table", "serde"]
surreal_value_json = ["surrealdb_extra_derive/surreal_value_json", "serde_json"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
