[package]
name = "surrealdb_extra_bench"
version = "0.7.0"
edition = "2021"
readme = "crates-io.md"
documentation = "https://docs.rs/surrealdb_extra"
repository = "https://github.com/jakin010/surrealdb_extra"
keywords = ["surrealdb", "surrealdb_extra", "surrealdb_orm", "orm", "query_builder"]
categories = ["database", "database-implementations"]

[dependencies]
surrealdb_extra = { path = "../surrealdb_extra", features = ["default", "query"] }
surrealdb_extra_derive = { path = "../surrealdb_extra_derive" }
surrealdb = { workspace = true, features = ["kv-mem"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "macros"] }
once_cell = "1.19.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_futures", "async_tokio"] }

[[bench]]
name = "select_builder"
harness = false
