[package]
name = "surrealdb_extra_derive"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Derive crate for surrealdb_extra"
readme = "crates-io.md"
documentation = "https://docs.rs/surrealdb_extra"
repository = "https://github.com/jakin010/surrealdb_extra"
keywords = ["surrealdb", "surrealdb_extra", "surrealdb_orm", "orm", "query_builder"]
categories = ["database", "database-implementations"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
surrealdb = "1.0.2"
syn = { version = "2.0.42", features = ["derive"] }

[dev-dependencies]
surrealdb_extra = { path = "../surrealdb_extra" }
