[package]
name = "surrealdb_extra_derive"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Derive crate for surrealdb_extra"
readme = "crates-io.md"
documentation = "https://docs.rs/surrealdb_extra"
repository = "https://github.com/jakin010/surrealdb_extra"
keywords = ["surrealdb", "surrealdb_extra", "surrealdb_orm", "orm", "query_builder"]
categories = ["database", "database-implementations"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
surrealdb = { workspace = true }
syn = { version = "2.0.42", features = ["derive"] }

[dev-dependencies]
surrealdb_extra = { path = "../surrealdb_extra" }
