[package]
name = "surrealdb_extra_tests"
version = "0.2.0"
edition = "2021"
readme = "crates-io.md"
documentation = "https://docs.rs/surrealdb_extra"
repository = "https://github.com/jakin010/surrealdb_extra"
keywords = ["surrealdb", "surrealdb_extra", "surrealdb_orm", "orm", "query_builder"]
categories = ["database", "database-implementations"]

[dependencies]
surrealdb_extra = { path = "../surrealdb_extra", features = ["default"] }
surrealdb_extra_derive = { path = "../surrealdb_extra_derive" }
surrealdb = { version = "1.0.0-beta.10", features = ["kv-mem", "scripting"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["rt", "macros"] }

[[test]]
name = "surrealdb_extra_tests"
path = "tests/lib.rs"
