[package]
name = "surrealdb_extra_tests"
version.workspace = true
edition.workspace = true
readme = "crates-io.md"
documentation = "https://docs.rs/surrealdb_extra"
repository = "https://github.com/jakin010/surrealdb_extra"
keywords = ["surrealdb", "surrealdb_extra", "surrealdb_orm", "orm", "query_builder"]
categories = ["database", "database-implementations"]

[dependencies]
surrealdb_extra = { path = "../surrealdb_extra", features = ["default", "query"] }
surrealdb_extra_derive = { path = "../surrealdb_extra_derive" }
surrealdb = { workspace = true, features = ["kv-mem", "scripting"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "macros"] }

[[test]]
name = "surrealdb_extra_tests"
path = "tests/lib.rs"
