[package]
name = "surrealdb_extra_tests"
version.workspace = true
edition.workspace = true
readme = "crates-io.md"
documentation = "https://docs.rs/surrealdb_extra"
repository = "https://github.com/jakin010/surrealdb_extra"
keywords = ["surrealdb", "surrealdb_extra", "surrealdb_orm", "orm", "query_builder"]
categories = ["database", "database-implementations"]

[dependencies]
surrealdb_extra = { path = "../surrealdb_extra", features = ["table", "surreal_value_json"] }
surrealdb_extra_derive = { path = "../surrealdb_extra_derive" }
surrealdb = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = "0.1.20"

[[test]]
name = "surrealdb_extra_tests"
path = "tests/lib.rs"
