[package]
name = "surrealdb_orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb_orm_derive = { path = "../surrealdb_orm_derive" }
async-trait = "0.1.68"
surrealdb = "1.0.0-beta.9"
serde = { version = "1.0.163", features = ["derive"] }
either = "1.8.1"
strum = { version = "0.24.1", features = ["derive"] }
