[package]
name = "surrealdb_orm_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealdb_orm = { path = "../surrealdb_orm" }
surrealdb_orm_derive = { path = "../surrealdb_orm_derive" }
syn = { version = "2.0.16", features = ["derive", "full"] }

[[test]]
name = "orm_tests"
path = "tests/lib.rs"
