[package]
name = "surrealdb_orm_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealdb_orm = { path = "../surrealdb_orm" }
surrealdb_orm_derive = { path = "../surrealdb_orm_derive" }
surrealdb = { version = "1.0.0-beta.9", features = ["kv-mem"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["rt", "macros"] }

[[test]]
name = "orm_tests"
path = "tests/lib.rs"
